# fastapi-microservice

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  makefile  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
src/alembic/: env.py
src/app/: routes.py
src/core/: events.py
src/core/config/: database.py  logging.py  redis.py  settings.py
src/core/middlewares/: __init__.py  logging.py  security.py  timeout.py
